--- a/Dashboard/machines-edit-modal.html
+++ b/Dashboard/machines-edit-modal.html
@@ -12,6 +12,7 @@
 
         <form class="user" id="editMachineForm" action="update_machine.php" method="post">
             <input type="hidden" id="location_id" name="location_id">
+            <input type="hidden" id="machine_id" name="machine_id">
             <div class="form-group">
                 <input type="text" class="form-control form-control-user" id="name" name="name" placeholder="Game Name (Required)" required>
             </div>
