--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -115,6 +115,7 @@
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
     <script src="js/getMachines.js"></script>
+    <script src="./js/location_suggestions.js"></script>
 
 
 
