--- a/Dashboard/get_machines_at_location.html
+++ b/Dashboard/get_machines_at_location.html
@@ -57,6 +57,7 @@
                     </div>
 
                     <!-- Content Row -->
+                    <h1>location name:</h1>
                     <div class="row">
                       <div id="editModalContainer"></div>
                       <div id="machineHistoryModalContainer"></div>
