added loc name to search

--- a/Dashboard/get_machines_at_location.html
+++ b/Dashboard/get_machines_at_location.html
@@ -57,7 +57,7 @@
                     </div>
 
                     <!-- Content Row -->
-                    <h1 id = "location_name"></h1>
+                    <div id = "location_name"></div>
                     <div class="row">
                       <div id="editModalContainer"></div>
                       <div id="machineHistoryModalContainer"></div>
