--- a/Dashboard/Edmonton_Locations.html
+++ b/Dashboard/Edmonton_Locations.html
@@ -147,13 +147,20 @@
                                                     <a class="dropdown-item" href="#" data-location-id="${location.LocationID}">Edit</a>
                                                     <a class="dropdown-item" href="#">Delete (not working yet)</a>
                                                     <div class="dropdown-divider"></div>
-                                                    <a class="dropdown-item" href="#">Games List</a>
+                                                    <a class="dropdown-item" href="#" id="gameListBtn">Games List</a>
                                                 </div>
                                             </div>
                                         `;
                                         locationsContainer.appendChild(locationDiv);
                                         const editButton = document.querySelector(`[data-location-id="${location.LocationID}"]`);
                                         editButton.onclick= function() { openEditModal(location); };
+
+                                        const gameListButton = document.getElementById('gameListBtn');
+                                        gameListButton.onclick= function() { openEditModal(location); };
+                                        var fullName = location.LocationID ", " location.Address;
+
+                                        var url = `get_machines_at_location.html?locationID=${encodeURIComponent(location.LocationID)}&Name=${encodeURIComponent(fullName)}`;
+                                        window.location.href = url; // Redirect to the URL
 
                                     });
                                 })
