--- a/Dashboard/Edmonton_Locations.html
+++ b/Dashboard/Edmonton_Locations.html
@@ -160,7 +160,17 @@
                                         var fullName = location.LocationID +  ", " + location.Address;
 
                                         var url = `get_machines_at_location.html?locationID=${encodeURIComponent(location.LocationID)}&Name=${encodeURIComponent(fullName)}`;
-                                        window.location.href = url; // Redirect to the URL
+                                        gameListButton.addEventListener('click', function() {
+                                            // Assuming you have an input for location name
+
+                                            if (location.LocationID) {
+                                                // Construct the URL with LocationID and Name as query parameters
+                                                var url = `get_machines_at_location.html?locationID=${encodeURIComponent(location.LocationID)}&Name=${encodeURIComponent(fullName)}`;
+                                                window.location.href = url; // Redirect to the URL
+                                            } else {
+                                                alert('Please enter a location ID'); // Handle the empty input
+                                            }
+                                        });
 
                                     });
                                 })
