--- a/Dashboard/Edmonton_Locations.html
+++ b/Dashboard/Edmonton_Locations.html
@@ -147,7 +147,7 @@
                                                     <a class="dropdown-item" href="#" data-location-id="${location.LocationID}">Edit</a>
                                                     <a class="dropdown-item" href="#">Delete (not working yet)</a>
                                                     <div class="dropdown-divider"></div>
-                                                    <a class="dropdown-item" href="#" id="gameListBtn">Games List</a>
+                                                    <a class="dropdown-item" href="#" g-list-location-id="${location.LocationID}">Games List</a>
                                                 </div>
                                             </div>
                                         `;
@@ -155,7 +155,7 @@
                                         const editButton = document.querySelector(`[data-location-id="${location.LocationID}"]`);
                                         editButton.onclick= function() { openEditModal(location); };
 
-                                        const gameListButton = document.getElementById('gameListBtn');
+                                        const gameListButton = document.querySelector(`[g-list-location-id="${location.LocationID}"]`);
                                         gameListButton.onclick= function() { openEditModal(location); };
                                         var fullName = location.Name +  ", " + location.Address;
                                         console.log("fullName: " + fullName);
