--- a/Dashboard/get_locations.html
+++ b/Dashboard/get_locations.html
@@ -90,7 +90,7 @@
                                       locationDiv.id = `location_${location.LocationID}`;
 
                                       const visibleContent = `
-                                          <div class="card-body py-3 d-flex flex-row align-items-center justify-content-between" id="visible_${machine.MachineID}">
+                                          <div class="card-body py-3 d-flex flex-row align-items-center justify-content-between" id="visible_${location.LocationID}">
                                               <h6 class="m-0 font-weight-bold text-primary">${location.Name} - ${location.Address} - ${location.City}</h6>
                                               <div class="dropdown no-arrow">
                                                   <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
@@ -122,19 +122,19 @@
                                           </div>
                                       `;
 
-                                      machineDiv.innerHTML = visibleContent + hiddenContent;
-                                      machinesContainer.appendChild(machineDiv);
-                                      const editButton = document.querySelector(`[data-machine-id="${machine.MachineID}"]`);
+                                      locationDiv.innerHTML = visibleContent + hiddenContent;
+                                      locationContainer.appendChild(locationDiv);
+                                      const editButton = document.querySelector(`[data-machine-id="${location.LocationID}"]`);
                                       editButton.onclick= function() { openEditModal(machine); };
 
-                                      document.getElementById(`visible_${machine.MachineID}`).addEventListener('click', function() {
-                                          const hiddenDiv = document.getElementById(`hidden_${machine.MachineID}`);
+                                      document.getElementById(`visible_${location.locationID}`).addEventListener('click', function() {
+                                          const hiddenDiv = document.getElementById(`hidden_${location.LocationID}`);
                                           hiddenDiv.classList.toggle('d-none');
                                       });
                                   });
                               })
                               .catch(error => {
-                                  console.error('Error fetching machines:', error);
+                                  console.error('Error fetching locations:', error);
                               });
                       }
                     /*  function fetchLocations(territory) {
