--- a/Dashboard/get_locations.html
+++ b/Dashboard/get_locations.html
@@ -123,7 +123,7 @@
                                       `;
 
                                       locationDiv.innerHTML = visibleContent + hiddenContent;
-                                      locationContainer.appendChild(locationDiv);
+                                      locationsContainer.appendChild(locationDiv);
                                       const editButton = document.querySelector(`[data-machine-id="${location.LocationID}"]`);
                                       editButton.onclick= function() { openEditModal(machine); };
 
