--- a/Dashboard/get_locations.html
+++ b/Dashboard/get_locations.html
@@ -124,9 +124,27 @@
 
                                       locationDiv.innerHTML = visibleContent + hiddenContent;
                                       locationsContainer.appendChild(locationDiv);
-                                      const editButton = document.querySelector(`[data-machine-id="${location.LocationID}"]`);
+                                      const editButton = document.querySelector(`[ddata-location-id="${location.LocationID}"]`);
                                       editButton.onclick= function() { openEditModal(machine); };
 
+                                      const gameListButton = document.querySelector(`[g-list-location-id="${location.LocationID}"]`);
+                                      gameListButton.onclick= function() { openEditModal(location); };
+                                      var fullName = location.Name +  ", " + location.Address;
+                                      console.log("fullName: " + fullName);
+                                      console.log("ID: " + location.LocationID);
+
+                                      var url = `get_machines_at_location.html?locationID=${encodeURIComponent(location.LocationID)}&Name=${encodeURIComponent(fullName)}`;
+                                      gameListButton.addEventListener('click', function() {
+                                          // Assuming you have an input for location name
+
+                                          if (location.LocationID) {
+                                              // Construct the URL with LocationID and Name as query parameters
+                                              var url = `get_machines_at_location.html?locationID=${encodeURIComponent(location.LocationID)}&Name=${encodeURIComponent(fullName)}`;
+                                              window.location.href = url; // Redirect to the URL
+                                          } else {
+                                              alert('Please enter a location ID'); // Handle the empty input
+                                          }
+                                      });
                                       document.getElementById(`visible_${location.locationID}`).addEventListener('click', function() {
                                           const hiddenDiv = document.getElementById(`hidden_${location.LocationID}`);
                                           hiddenDiv.classList.toggle('d-none');
