using params instead of separate files for location lists

--- a/Dashboard/get_locations.html
+++ b/Dashboard/get_locations.html
@@ -145,7 +145,7 @@
                                               alert('Please enter a location ID'); // Handle the empty input
                                           }
                                       });
-                                      document.getElementById(`visible_${location.locationID}`).addEventListener('click', function() {
+                                      document.getElementById(`visible_${location.LocationID}`).addEventListener('click', function() {
                                           const hiddenDiv = document.getElementById(`hidden_${location.LocationID}`);
                                           hiddenDiv.classList.toggle('d-none');
                                       });
