removed autocomplete from add machine form for adding location

--- a/Dashboard/add_machine.html
+++ b/Dashboard/add_machine.html
@@ -127,7 +127,7 @@
                                         </div>
 
                                         <div class="form-group">
-                                            <input type="text" class="form-control form-control-user" id="locationInput" placeholder="Current Location (Required)" required>
+                                            <input type="text" class="form-control form-control-user" id="locationInput" placeholder="Current Location (Required)" autocomplete="off" required>
                                             <div id="locationSuggestions" class="suggestions-box"></div>
 
                                         </div>
