fix suggestion box

--- a/Dashboard/add_machine.html
+++ b/Dashboard/add_machine.html
@@ -46,7 +46,7 @@
                                         <input type="hidden" id="machine_type_id" name="machine_type_id">
                                         <div class="form-group">
                                             <input type="text" class="form-control form-control-user" id="machineTypeInput" placeholder="Machine Type (Required)" autocomplete="off" required>
-                                            <div id="machineTypeSuggestions" class="suggestions-box1"></div>
+                                            <div id="machineTypeSuggestions" class="suggestions-box"></div>
                                         </div>
                                         <div class="form-group">
                                             <input type="text" class="form-control form-control-user" id="serial_number" name="serial_number" placeholder="Serial_Number">
