--- a/Dashboard/add_machine.html
+++ b/Dashboard/add_machine.html
@@ -44,7 +44,10 @@
                                     <form class="user" action="add_machine.php" method="post">
                                         <input type="hidden" id="location_id" name="location_id">
                                         <input type="hidden" id="machine_type_id" name="machine_type_id">
-                                        
+                                        <div class="form-group">
+                                            <input type="text" class="form-control form-control-user" id="machineTypeInput" placeholder="Machine Type (Required)" autocomplete="off" required>
+                                            <div id="machineTypeSuggestions" class="suggestions-box"></div>
+                                        </div>
                                         <div class="form-group">
                                             <input type="text" class="form-control form-control-user" id="serial_number" name="serial_number" placeholder="Serial_Number">
                                         </div>
