made machine type model open ended

--- a/Dashboard/edit_machine_type_modal.html
+++ b/Dashboard/edit_machine_type_modal.html
@@ -16,18 +16,7 @@
                 <input type="text" class="form-control form-control-user" id="name" name="name" placeholder="Game Name (Required)" required>
             </div>
             <div class="form-group">
-                <select class="form-control form-control-user-dropdown" id="model" name="model">
-                    <option value="">Model</option>
-                    <option value="Jukebox">Jukebox</option>
-                    <option value="Pinball">Pinball</option>
-                    <option value="Twin">Twin</option>
-                    <option value="Deluxe">Deluxe</option>
-                    <option value="Redemption">Redemption</option>
-                    <option value="Cocktail">Cocktail</option>
-                    <option value="Shooting">Shooting</option>
-                    <option value="Pool">Pool</option>
-                    <option value="Air Hockey">Air Hockey</option>
-                </select>
+                <input type="text" class="form-control form-control-user" id="model" name="model" placeholder="Model">
             </div>
             <div class="form-group">
                 <select class="form-control form-control-user-dropdown" id="genre" name="genre">
