Added more manufactuerers

--- a/Dashboard/add_machine_type.html
+++ b/Dashboard/add_machine_type.html
@@ -71,6 +71,33 @@
                                                 <option value="">Manufacture</option>
                                                 <option value="Raw Thrills">Raw Thrills</option>
                                                 <option value="Sega">Sega</option>
+                                                <option value="Adrenaline Amusements">Adrenaline Amusements</option>
+                                                <option value="AMI Entertainment">AMI Entertainment</option>
+                                                <option value="Andamiro Co.">Andamiro Co.</option>
+                                                <option value="Apple Industries">Apple Industries</option>
+                                                <option value="Bandai Namco Amusements">Bandai Namco Amusements</option>
+                                                <option value="Baytek Games">Baytek Games</option>
+                                                <option value="Benchmark Games International">Benchmark Games International</option>
+                                                <option value="Betson Enterprises">Betson Enterprises</option>
+                                                <option value="Diamond Billiards">Diamond Billiards</option>
+                                                <option value="Incredible Concepts in Entertainment">Incredible Concepts in Entertainment</option>
+                                                <option value="Innovative Games">Innovative Games</option>
+                                                <option value="Intercard">Intercard</option>
+                                                <option value="LAI Games">LAI Games</option>
+                                                <option value="Laniel Changers">Laniel Changers</option>
+                                                <option value="Merrit Industries">Merrit Industries</option>
+                                                <option value="Punchlines Boxer">Punchlines Boxer</option>
+                                                <option value="Rainbow Cranes">Rainbow Cranes</option>
+                                                <option value="Shelti">Shelti</option>
+                                                <option value="Skeeball">Skeeball</option>
+                                                <option value="Smart Industries">Smart Industries</option>
+                                                <option value="Standard Changers">Standard Changers</option>
+                                                <option value="Stern Pinball">Stern Pinball</option>
+                                                <option value="Tornado">Tornado</option>
+                                                <option value="Touch Tunes">Touch Tunes</option>
+                                                <option value="UNIS">UNIS</option>
+                                                <option value="Uplay America">Uplay America</option>
+                                                <option value="Valley / Dynamo">Valley / Dynamo</option>
                                             </select>
                                         </div>
                                         <div class="form-group">
