--- a/Dashboard/add_machine.html
+++ b/Dashboard/add_machine.html
@@ -39,7 +39,7 @@
                             <div class="col-lg-6-center">
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">Add a Machine</h1>
+                                        <h1 class="h4 text-gray-900 mb-4">Add a Placed Machine</h1>
                                     </div>
                                     <form class="user" action="add_machine.php" method="post">
                                         <input type="hidden" id="location_id" name="location_id">
