--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -38,7 +38,7 @@
               <div id="topbarContainer"></div>
 
               <script src="topbar.js"></script>
-              
+
 
                 <!-- End of Topbar -->
 
@@ -47,7 +47,7 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+                        <h1 class="h3 mb-0 text-gray-800">Placed Machines</h1>
                         <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                                 class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
                     </div>
