--- a/Dashboard/get_machines_at_location.html
+++ b/Dashboard/get_machines_at_location.html
@@ -111,6 +111,7 @@
             </div>
         </div>
     </div>
+    <script src="./js/machine_type_suggestions.js"></script>
 
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
