--- a/Dashboard/add_machine.html
+++ b/Dashboard/add_machine.html
@@ -150,7 +150,7 @@
 
     <script src="./js/location_suggestions.js"></script>
     <script src="./js/machine_type_suggestions.js"></script>
-
+    <script>initializeMachineTypeSuggestions();</script>
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
