fixing machine edit modal

--- a/Dashboard/machines-edit-modal.html
+++ b/Dashboard/machines-edit-modal.html
@@ -13,6 +13,7 @@
         <form class="user" id="editMachineForm" action="update_machine.php" method="post">
               <input type="hidden" id="location_id" name="location_id">
               <input type="hidden" id="machine_type_id" name="machine_type_id">
+              <input type="hidden" id="machine_id" name="machine_id">
               <div class="form-group">
                   <input type="text" class="form-control form-control-user" id="machineTypeInput" placeholder="Machine Type (Required)" autocomplete="off" required>
                   <div id="machineTypeSuggestions" class="suggestions-box"></div>
