fixing machine history modal stuff

--- a/Dashboard/get_machines_at_location.html
+++ b/Dashboard/get_machines_at_location.html
@@ -124,6 +124,7 @@
     <script src="js/sb-admin-2.min.js"></script>
     <script src="js/getMachinesAtLocation.js"></script>
     <script src="./js/machine_type_suggestions.js"></script>
+    <script src="./js/location_suggestions.js"></script>
 
 
 
