fixing machine history modal stuff

--- a/Dashboard/add_machine.html
+++ b/Dashboard/add_machine.html
@@ -103,6 +103,7 @@
                                         <input type="submit" class="btn btn-primary btn-user btn-block" value="Submit">
                                     </form>
                                     <script>
+                                    initializeLocationSuggestions();
                                     document.getElementById('addPrizeButton').addEventListener('click', function() {
                                         const prizeContainer = document.getElementById('prizesContainer');
                                         const prizeNumber = prizeContainer.children.length + 1;
